add JS t-shirt colors

--- a/src/index.html
+++ b/src/index.html
@@ -43,12 +43,12 @@
         <main>
             <section class="main">
                 <div class="minis">
-                    <div class="preview" id="front"><img src="/assets/front.jpg" alt="white t-shirt"></div>
-                    <div class="preview" id="turn"><img src="/assets/turn.jpg" alt="white t-shirt"></div>
-                    <div class="preview" id="behind"><img src="/assets/behind.jpg" alt="white t-shirt"></div>
+                    <div class="preview"><img id="front" src="/assets/front.jpg" alt="white t-shirt"></div>
+                    <div class="preview"><img id="turn" src="/assets/turn.jpg" alt="white t-shirt"></div>
+                    <div class="preview"><img id="behind" src="/assets/behind.jpg" alt="white t-shirt"></div>
                 </div>
                 <div class="picture">
-                    <img src="/assets/t-shirt.png" alt="white t-shirt" />
+                    <img id="main-tshirt" src="/assets/t-shirt.png" alt="white t-shirt" />
                 </div>
                 <div class="menu">
                     <h2>White t-shirt</h2>
@@ -67,11 +67,11 @@
                     </select>
                     <br><br>
                 <div class="section-option">
-                    <div class="options"><img src="/assets/front-black.jpg" alt="t-shirt"></div>
-                    <div class="options"><img src="/assets/front-purple.jpg" alt="t-shirt"></div>
-                    <div class="options"><img src="/assets/front-light-blue.jpg" alt="t-shirt"></div>
-                    <div class="options"><img src="/assets/front-red.jpg" alt="t-shirt"></div>
-                    <div class="options"><img src="/assets/front-yellow.jpg" alt="t-shirt"></div>
+                    <div class="options img-black"><img src="/assets/front-black.jpg" alt="t-shirt"></div>
+                    <div class="options img-purple"><img src="/assets/front-purple.jpg" alt="t-shirt"></div>
+                    <div class="options img-blue"><img src="/assets/front-light-blue.jpg" alt="t-shirt"></div>
+                    <div class="options img-red"><img src="/assets/front-red.jpg" alt="t-shirt"></div>
+                    <div class="options img-yellow"><img src="/assets/front-yellow.jpg" alt="t-shirt"></div>
                 </div>
                     <br><br>
                     <button class="btn-buy">Buy Now</button>
