--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
         </header>
 
         <main>
-            <section class="main">
+            <section id="main-section" class="main">
                 <div class="minis">
                     <div class="preview"><img id="front" src="/assets/front.jpg" alt="white t-shirt"></div>
                     <div class="preview"><img id="turn" src="/assets/turn.jpg" alt="white t-shirt"></div>
@@ -75,11 +75,11 @@
                     <div class="options img-yellow"><img src="/assets/front-yellow.jpg" alt="t-shirt"></div>
                 </div>
                     <br><br>
-                    <button class="btn-buy">Buy Now</button>
+                    <button id="btn-buy" class="btn-buy">Buy Now</button>
                 </div>
             </section>
 
-            <section class="profile">
+            <section id="section-profile" class="profile">
                 <h2>Profile</h2>
                 <form class="profile-form">
                     <div class="form-element">
@@ -105,7 +105,7 @@
                 </form>
             </section>
 
-            <section class="address">
+            <section id="section-address" class="address">
                 <h2>Address</h2>
                 <form id="form-address">
                     <div class="form-element">
@@ -165,7 +165,7 @@
                 </form>
             </section>
 
-            <section class="shipping">
+            <section id="section-shipping" class="shipping">
                 <h2>Shipping Type</h2>
                 <form action="#">
 
@@ -187,7 +187,7 @@
                 </form>
             </section>
 
-            <section class="finish">
+            <section id="section-finish" class="finish">
                 <div class="order-message">
                     <h2>Your order is complete 🎉</h2>
                     <p>Thank You for your order!</p>
