next button function added

--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,11 @@
 
     <body>
         <header>
-            <div class="header-main">
+            <div id="header-main" class="header-main">
                 <h2>Logo</h2>
             </div>
 
-            <div class="header-progress">
+            <div id="header-progress" class="header-progress">
                 <div class="messages">
                     <div class="message child-one">Profile</div>
                     <div class="message child-two">Address</div>
@@ -32,9 +32,9 @@
                 <div class="wrapper">
                     <div class="margin-area">
                         <div class="dot one"></div>
-                        <div class="dot two"></div>
-                        <div class="dot three"></div>
-                        <div class="dot four"></div>
+                        <div id="dot-two" class="dot two"></div>
+                        <div id="dot-three" class="dot three"></div>
+                        <div id="dot-four" class="dot four"></div>
                         <div class="progress-bar first"></div>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                 </div>
             </section>
 
-            <section id="section-profile" class="profile">
+            <section id="profile-section" class="profile">
                 <h2>Profile</h2>
                 <form class="profile-form">
                     <div class="form-element">
@@ -105,7 +105,7 @@
                 </form>
             </section>
 
-            <section id="section-address" class="address">
+            <section id="address-section" class="address">
                 <h2>Address</h2>
                 <form id="form-address">
                     <div class="form-element">
@@ -165,7 +165,7 @@
                 </form>
             </section>
 
-            <section id="section-shipping" class="shipping">
+            <section id="shipping-section" class="shipping">
                 <h2>Shipping Type</h2>
                 <form action="#">
 
@@ -187,7 +187,7 @@
                 </form>
             </section>
 
-            <section id="section-finish" class="finish">
+            <section id="finish-section" class="finish">
                 <div class="order-message">
                     <h2>Your order is complete 🎉</h2>
                     <p>Thank You for your order!</p>
@@ -238,16 +238,16 @@
 
 
         <footer>
-            <div class="first-foot">
+            <div id="first-foot" class="first-foot">
                 <h2>Shop 2022</h2>
             </div>
 
-            <div class="second-foot">
+            <div id="second-foot" class="second-foot">
                 <div class="div-clear">
                     <button class="btn-clear">Clear form</button>
                 </div>
                 <div class="div-next">
-                    <button class="btn-next">Next</button>
+                    <button id="next-button" class="btn-next">Next</button>
                 </div>
             </div>
         </footer>
