Clear form button

--- a/src/index.html
+++ b/src/index.html
@@ -244,7 +244,7 @@
 
             <div id="second-foot" class="second-foot">
                 <div class="div-clear">
-                    <button class="btn-clear">Clear form</button>
+                    <button id="clear-form" class="btn-clear">Clear form</button>
                 </div>
                 <div class="div-next">
                     <button id="next-button" class="btn-next">Next</button>
