clear form finished

--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
 
             <section id="profile-section" class="profile">
                 <h2>Profile</h2>
-                <form class="profile-form">
+                <form id="profile-form" class="profile-form">
                     <div class="form-element">
                         <label for="name">Username:</label><br>
                         <input type="text" id="user-name" name="name"><br>
