--- a/src/index.html
+++ b/src/index.html
@@ -229,9 +229,17 @@
                 </div>
             </section>
 
-            <div class="timer">
-                <p>You started registering 2 minutes ago. <br><br>Hurry up!
-                </p>
+
+
+            <section id="thank-section" class="thank">
+
+
+
+                
+                </section>
+
+            <div id="timer">
+                
             </div>
 
         </main>
