finish section tshirt

--- a/src/index.html
+++ b/src/index.html
@@ -197,8 +197,8 @@
                     <div class="purchase-card">
                         <h2>Your purchase</h2>
                         <div class="product-card">
-                            <div class="product-img">
-                                <img src="../assets/t-shirt.png" alt="white t-shirt" class="img-shirt" />
+                            <div id="selected-shirt" class="product-img">
+
                             </div>
                             <div class="product-title">
                                 <h3>white t-shirt</h3>
@@ -235,11 +235,11 @@
 
 
 
-                
-                </section>
+
+            </section>
 
             <div id="timer">
-                
+
             </div>
 
         </main>
