--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,7 @@
 
             <section id="address-section" class="address">
                 <h2>Address</h2>
-                <form id="form-address">
+                <form id="form-address" class="form-address">
                     <div class="form-element">
                         <label for="fname">First name</label><br>
                         <input type="text" id="fname" name="fname">
@@ -153,7 +153,6 @@
                     <div class="form-element">
                         <label for="phone">Phone</label><br>
                         <input id="tel-country" class="tel-country">
-
                         </input>
                         <input type="tel" id="phone" name="phone" placeholder="Your phone number">
                         <div id="phone-error" class="error"></div>
