--- a/src/index.html
+++ b/src/index.html
@@ -207,7 +207,7 @@
                                 <h3>T-shirt</h3>
                                 <p id="selected-size" class="product-size"></p>
                                 <p id="selected-color" class="product-color"></p>
-                                <p class="delivery-txt">Estimate delivery date</p>
+                                <p class="delivery-txt">Estimate delivery date:</p>
                                 <p id="delivery-date" class="delivery-date"></p>
                             </div>
                         </div>
@@ -224,9 +224,9 @@
                     <div class="order-card">
                         <h4>Your order</h4>
                         <div class="price">
-                            <p class="product-price">T-shirt:<span>14.56$</span></p>
-                            <p class="shipping-price">Premium shipping:<span>9.99$</span></p>
-                            <p class="total-price">Total:<span>24.54$</span></p>
+                            <p class="product-price">T-shirt:<span id="tshirt-price"></span></p>
+                            <p class="shipping-price">Shipping:<span id="shipping-price"></span></p>
+                            <p class="total-price">Total:<span id="total-price"></span></p>
                         </div>
                     </div>
                 </div>
