--- a/src/index.html
+++ b/src/index.html
@@ -214,8 +214,8 @@
                         <div class="conditional-check">
                             <input type="checkbox" id="conditional-box" />
                             <label for="conditional-box">I have read and I accept the terms and conditionals.</label>
-                            <p class="error-check">
-                                Please accept the terms and conditions
+                            <p id="error-check" class="error-check">
+                               Please accept the terms and conditions
                             </p>
                         </div>
                         <button class="btn-buy">Buy Now</button>
