--- a/src/index.html
+++ b/src/index.html
@@ -215,10 +215,10 @@
                             <input type="checkbox" id="conditional-box" />
                             <label for="conditional-box">I have read and I accept the terms and conditionals.</label>
                             <p id="error-check" class="error-check">
-                               Please accept the terms and conditions
+                            Please accept the terms and conditions
                             </p>
                         </div>
-                        <button class="btn-buy">Buy Now</button>
+                        <button id="confirm-btn" class="btn-buy">Confirm</button>
                     </div>
                     <!-- Order card -->
                     <div class="order-card">
