--- a/src/index.html
+++ b/src/index.html
@@ -42,41 +42,58 @@
 
         <main>
             <section id="main-section" class="main">
+
                 <div class="minis">
                     <div class="preview"><img id="front" src="/assets/front.jpg" alt="white t-shirt"></div>
                     <div class="preview"><img id="turn" src="/assets/turn.jpg" alt="white t-shirt"></div>
                     <div class="preview"><img id="behind" src="/assets/behind.jpg" alt="white t-shirt"></div>
                 </div>
                 <div class="picture">
-                    <img id="main-tshirt" src="/assets/front.jpg" alt="white t-shirt" />
+                    <img id="main-tshirt" src="/assets/front-white-main.jpg" alt="white t-shirt" />
                 </div>
                 <div class="menu">
-                    <h2>T-shirt</h2>
-                    <br><br>
-                    <h3>Price:</h3>
-                    <br>
-                    <h2 class="price">20.00$</h2>
-                    <br><br>
-                    <label for="size">Select size</label><br>
-                    <select id="size" name="size">
-                        <option value="XS">XS</option>
-                        <option value="S">S</option>
-                        <option value="M">M</option>
-                        <option value="L">L</option>
-                        <option value="XL">XL</option>
-                    </select>
-                    <br><br>
-                    <div class="section-option ">
-                        <div class="options img-white"><img src="/assets/front.jpg" alt="t-shirt"></div>
-                        <div class="options img-black"><img src="/assets/front-black.jpg" alt="t-shirt"></div>
-                        <div class="options img-purple"><img src="/assets/front-purple.jpg" alt="t-shirt"></div>
-                        <div class="options img-blue"><img src="/assets/front-light-blue.jpg" alt="t-shirt"></div>
-                        <div class="options img-red"><img src="/assets/front-red.jpg" alt="t-shirt"></div>
-                        <div class="options img-yellow"><img src="/assets/front-yellow.jpg" alt="t-shirt"></div>
+                    <div class="menu-item">
+                        <h2>T-shirt</h2>
                     </div>
-                    <br><br>
-                    <button id="btn-buy" class="btn-buy">Buy Now</button>
+
+                    <div class="menu-item">
+                        <h3>Price:</h3>
+                    </div>
+
+                    <div class="menu-item">
+                        <h2 class="price">20.00$</h2>
+                    </div>
+
+                    <div class="menu-item">
+                        <label for="size">Select size</label><br>
+                        <select id="size" name="size">
+                            <option value="XS">XS</option>
+                            <option value="S">S</option>
+                            <option value="M">M</option>
+                            <option value="L">L</option>
+                            <option value="XL">XL</option>
+                        </select>
+                    </div>
+
+                    <div class="menu-item">
+                        <div class="section-option ">
+                            <div class="options img-white"><img src="/assets/front-white-option.jpg" alt="t-shirt">
+                            </div>
+                            <div class="options img-black"><img src="/assets/front-black-option.jpg" alt="t-shirt">
+                            </div>
+                            <div class="options img-purple"><img src="/assets/front-purple-option.jpg" alt="t-shirt">
+                            </div>
+                            <div class="options img-blue"><img src="/assets/front-light-blue-option.jpg" alt="t-shirt">
+                            </div>
+                            <div class="options img-red"><img src="/assets/front-red-option.jpg" alt="t-shirt"></div>
+                            <div class="options img-yellow"><img src="/assets/front-yellow-option.jpg" alt="t-shirt">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div><button id="btn-buy" class="btn-buy">Buy Now</button></div>
                 </div>
+
             </section>
 
             <section id="profile-section" class="profile">
@@ -267,7 +284,7 @@
                 </div>
             </section>
 
-            <div id="timer">
+            <div class="timer">
 
             </div>
 
