--- a/src/index.html
+++ b/src/index.html
@@ -284,7 +284,7 @@
                 </div>
             </section>
 
-            <div class="timer">
+            <div id="timer" class="timer">
 
             </div>
 
