--- a/src/index.html
+++ b/src/index.html
@@ -214,6 +214,10 @@
 
                 <!-- Purchase card -->
                 <div class="card">
+                    <div id="order-message" class="order-message">
+                        <h2>Your order is complete 🎉</h2>
+                        <p>Thank You for your order!</p>
+                    </div>
                     <div class="purchase-card">
                         <h2>Your purchase</h2>
                         <div class="product-card">
@@ -248,17 +252,14 @@
                             <p class="total-price">Total:<span id="total-price"></span></p>
                         </div>
                     </div>
+                    <div id="finish-timer" class="finish-timer"></div>
                 </div>
             </section>
 
 
 
-            <section id="thank-section" class="thank-section">
+            <!-- <section id="thank-section" class="thank-section">
                 <div class="purchase-card">
-                <div class="order-message">
-                    <h2>Your order is complete 🎉</h2>
-                    <p>Thank You for your order!</p>
-                </div>
                 <div class="purchase-card">
                     <h2>Your purchase</h2>
                     <div class="product-card">
@@ -280,9 +281,9 @@
                             <p class="shipping-price">Shipping:<span id="shipping-price"></span></p>
                             <p class="total-price">Total:<span id="total-price"></span></p>
                         </div>
-                    </div>
+                    </div>  
                 </div>
-            </section>
+            </section>--> 
 
             <div id="timer" class="timer">
 
